[cleanup][broker][Modernizer] fix violations in pulsar-broker (#17691)
Co-authored-by: Marvin Cai <cai19930303@gmail.com>